# LanguageRecognition

./: .gitignore  Cargo.toml
node/: app.js  testFunction.js
src/: language_detector.rs
